--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,7 +46,13 @@
       </a>
     </li> <!-- .nav-item -->
     {% endfor %}
-
+    <hr />
+    <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
+      <a href="https://eumel-suite.github.io/" class="nav-link">
+        <i class="fa-fw fa-file ml-xl-3 mr-xl-3 unloaded"></i>
+        <span>EUMEL Suite</span>
+      </a>
+    </li>
   </ul> <!-- ul.nav.flex-column -->
 
  <div class="sidebar-bottom mt-auto d-flex flex-wrap justify-content-center">
