--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,7 +48,7 @@
     {% endfor %}
     <hr />
     <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
-      <a href="https://eumel-suite.github.io/" class="nav-link">
+      <a href="https://eumel-suite.github.io/" class="nav-link" target="_blank">
         <i class="fa-fw fa-file ml-xl-3 mr-xl-3 unloaded"></i>
         <span>EUMEL Suite</span>
       </a>
